[gd_scene load_steps=3 format=3 uid="uid://dnj48x774uo6d"]

[ext_resource type="Script" uid="uid://vjdnmkgkk54u" path="res://Scene/Component/charged_skill_indicator.gd" id="1_d8nql"]
[ext_resource type="Texture2D" uid="uid://5aksewbab8j" path="res://icon.svg" id="2_8c440"]

[node name="ChargedSkillIndicator" type="VBoxContainer"]
custom_minimum_size = Vector2(80, 80)
script = ExtResource("1_d8nql")

[node name="SkillName" type="Label" parent="."]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "fire
x3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="SkillIcon" type="TextureRect" parent="CenterContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("2_8c440")
expand_mode = 1
